--- a/styles.css
+++ b/styles.css
@@ -20,9 +20,23 @@ body{
     background-color:thistle;
 }
 
-.btn-insert{
+.btn-open{
     height: 80%;
     width: 20em;
+}
+
+.btn-close
+{
+    background-color: #ff0000;
+    color: white;
+    border: 2.5px black outset;
+    border-radius: 5px;
+    width: 2em;
+}
+
+.btn-close:hover
+{
+    background-color: #920000 ;
 }
 
 
@@ -74,4 +88,58 @@ body{
 .pages
 {
 
+}
+.modal-form
+{
+  height: 30em;
+  width: 20em;
+}
+
+.modal-form::backdrop
+{
+    background: grey;
+    opacity: 0.4;
+}
+
+.book-form
+{
+    display: grid;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+label
+{
+    grid-column: 1/3;
+    font-weight: bold;
+}
+
+label:last-of-type
+{
+    grid-column: 1/1;
+    margin-bottom: 1em;
+}
+
+#description
+{
+    margin-bottom: 1em;
+    grid-column: 1/3;
+    resize: none;
+    height: 10em;
+}
+
+#title,
+#author
+{
+    margin-bottom: 1em;
+    grid-column: 1/3;
+    height:2em;
+}
+#pages
+{
+    margin-left: -8em;
+    margin-bottom: 1em;
+    height: 2em;
+    width: 4em;
 }
