--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 
 html,
 body{
-    height: 100%;
     margin: 0;
     box-sizing: border-box;
 }
@@ -31,7 +30,6 @@ body{
     color: white;
     border: 2.5px black outset;
     border-radius: 5px;
-    width: 2em;
 }
 
 .btn-close:hover
@@ -43,52 +41,119 @@ body{
 .library-content{
 
     display: grid;
-    grid-template: repeat(auto-fit, minmax(20em, 1fr))/ repeat(auto-fill, minmax(23em,1fr));
+    grid-template: repeat(auto-fill, minmax(20em, 1fr))/ repeat(auto-fill, minmax(23em,1fr));
     background-color: bisque;
+    height: calc(100vh - 10em);
 }
+
 
 .book{
     box-shadow: 7px 8px 9px -3px rgba(0,0,0,0.78);
     border: 1px black solid;
     border-left: 1em grey ridge;
+    border-right: brown ridge 0.4em;
+    border-bottom: brown ridge 0.4em;
     display: grid;
     margin: 2em;
     padding: 1.5em;
     background-color:tomato;
     align-items: center;
     justify-items: center;
-    grid-template-rows: 3em auto 2em;
-    grid-template-columns: auto;
-    gap: 1px ;
+    grid-template-rows: 1fr auto 1fr;
+    grid-template-columns: 1fr 1fr;
+    gap: 2em ;
+}
+
+.book:hover{
+
+    transform: matrix3d(-1,0,0.00,0,0.00,1,0.00,0,0,0,-1,0,0,0,0,1);
+    transition: 0.8s;
+    border-bottom: none;
+    
+    .author,
+    .title,
+    .pages{
+        visibility: hidden;
+        transition: 0.2s;
+    }
+    .description,
+    .btn-del{
+        visibility: visible;
+        transform: matrix3d(-1,0,0.00,0,0.00,1,0.00,0,0,0,-1,0,0,0,0,1);
+    }
+    
+
+}
 
 
+
+.book >.btn-close
+{
+ 
 }
 
 
 .title,
 .description
 {
-    grid-column: 1/3;
+    
 }
 
 .title
 {
+    align-self: end;
+    grid-column: 1/3;
+    grid-row: 1/1;
     font-weight: bold;
-    font-size: 2em;
+    font-size: 4em;
 }
 .description
 {
-
+    overflow-y: auto;
+    visibility: hidden;
+    grid-row: 1/-1;
+    grid-column: 1/-1;
+    z-index: 1; 
 }
 .author
 {
+    align-self: baseline;
+    grid-column: 1/2;
+    grid-row: 3/3;
     font-style: italic;
-    font-size: small;
+    font-size: 1.2em;
 }
 .pages
 {
-
+    align-self: baseline;
+    grid-column: 2/3;
+    grid-row: 3/3;
+    font-size: 1.2em;
 }
+.btn-del
+{
+    background-color: red;
+    color: white;
+    border: 0;
+    grid-row: 1/-1;
+    grid-column: 1/-1;
+    align-self: flex-end;
+    justify-self: end;
+    font-size: 1.5em;
+    border: black solid 1px;
+    border-bottom: black 3px solid;
+    
+}
+.btn-del:active
+{
+    position: relative;
+    background-color:#920000;
+    top: 1px;
+    border-bottom: black 2px solid;
+}
+
+
+
 .modal-form
 {
   height: 30em;
@@ -142,4 +207,12 @@ label:last-of-type
     margin-bottom: 1em;
     height: 2em;
     width: 4em;
+}
+
+#btn-submit
+{
+    grid-column: 1/3;
+    background-color:rgb(128, 108, 255);
+    color: white;
+    border-radius: 8px;
 }
